Added frontend policies, resources, principals, users and clients pages
